--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,11 +2,11 @@
 
 @import "missing-stylesheets-chukn1.css";
 @import url("missing-stylesheets-chukn2.css");
-h1{
+/* h1{
     background-color: azure;
     color: blue;
 }
 h3{
     background-color: beige;
     color: brown;
-}
+} */
